fix main margin when sidebar wrapped

--- a/www/src/scss/components/_sidebar.scss
+++ b/www/src/scss/components/_sidebar.scss
@@ -1,6 +1,6 @@
 #sidebar {
     height: 100%;
-    width: $sidebarWidth;
+    width: $sidebarFullWidth;
     z-index: 1;
     top: 0;
     left: 0;
@@ -44,7 +44,7 @@
     }
 
     &.wrapped {
-        width: 6rem;
+        width: $sidebarWrappedWidth;
 
         & #cta-toggle-sidebar i {
             transform: rotate(180deg);
