--- a/www/src/scss/grids/_containers.scss
+++ b/www/src/scss/grids/_containers.scss
@@ -20,7 +20,6 @@
     height: 100%;
     overflow: auto;
     padding: 0px 20px;
-    margin-left: $sidebarWidth;
 }
 
 .main > *:nth-child(n) {
